istio/traffic/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: main-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: ingress          # must match labels on the Helm-installed gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - yousef.localhost
